--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Dashboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  background-color: #FAFAF5;
+}
+
+.on {
+  color: green;
+}
+
+.off {
+  color: red;
+}
+
+.mid-margin-bottom {
+  margin-bottom: 30px;
+}
