--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="mid-margin-bottom">Agendador Digital Ocean</h1>
+  <h1 class="mid-margin-bottom">Painel Digital Ocean</h1>
   <div class="row">
     <div class="col-lg-12">
       <table class="table table-responsive">
