--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,43 +2,21 @@
   <h1 class="mid-margin-bottom">Painel Digital Ocean</h1>
   <div class="row">
     <div class="col-lg-12">
-      <table id="droplets" class="table table-responsive">
-        <thead>
-          <tr>
-            <th>ID Externo</th>
-            <th>Instância</th>
-            <th>Região</th>
-            <th>RAM (MB)</th>
-            <th>Disco (GB)</th>
-            <th>CPUs</th>
-            <th>Imagem</th>
-            <th>Estado</th>
-            <th>Ações</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @droplets.each do |droplet| %>
-          <tr>
-            <td><%= droplet.external_id %></td>
-            <td><%= droplet.name %></td>
-            <td><%= droplet.region_slug %></td>
-            <td><%= droplet.memory %></td>
-            <td><%= droplet.disk %></td>
-            <td><%= droplet.vcpus %></td>
-            <td><%= droplet.image_name %></td>
-            <td class="<%= droplet.status %>"><%= droplet.status %></td>
-            <td>
-              <input class="update_url" type="hidden" value="<%= droplet_url(droplet) %>">
-              <% if droplet.on? %>
-                <button class="button_off btn btn-default">Desligar</button>
-              <% else %>
-                <button class="button_on btn btn-default">Ligar</button>
-              <% end %>
-            </td>
-          </tr>
-          <% end %>
-        <tbody>
-      </table>
+      <div id="droplets" class="text-center mid-margin-bottom">
+        <%= render "shared/droplets_list" %>
+      </div>
+
+      <div class="text-center mid-margin-bottom">
+        <button id="btn_refresh" class="btn btn-default">
+          <i class="fa fa-icon fa-refresh"></i> Atualizar Droplets
+        </button>
+      </div>
+
+
+      <h2>Log de Ações</h2>
+      <div class="well">
+      </div>
+
     </div>
   </div>
 </div>
